traefik/ingressroutetcp-app2.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: app2-pg-route
  namespace: traefik  
spec:
  entryPoints:
    - postgres
  routes:
  - match: HostSNI(`app2-pg-cluster.local`)
    services:
    - name: app2-pg-cluster-pooler-rw  
      namespace: app2-pg-cluster  
      port: 5432
  tls:  
    passthrough: true
